--- a/style.css
+++ b/style.css
@@ -122,3 +122,19 @@ nav ul li a:hover, a.active{
     display: flex;
     justify-content: space-between;
 }
+.icons {
+    font-size: x-large;
+    background-color: white;
+    border: white;
+    color: #3352F2;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; 
+}
+
+input[type=number] {
+    -moz-appearance:textfield; 
+}
